# djangocms-ecosystem

./: .gitignore  LICENSE  README.md  pyproject.toml
djangocms_ecosystem/: __init__.py  cms_plugins.py
djangocms_ecosystem/templates/djangocms_ecosystem/: deprecated.html  packages.html  panel.html
