[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djangocms-ecosystem"
version = "2025/12"
description = "An overview of the django CMS ecosystem."
authors = [
    { name = "django CMS Association", email = "info@django-cms.org" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/django-cms/djangocms-ecosystem"

[tool.setuptools.packages.find]
where = ["."]
